deploy-k8s/opa-gov-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa-gov-api
  labels:
    app: opa-gov-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa-gov-api
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
        consul.hashicorp.com/enable-metrics-merging: 'true'
        consul.hashicorp.com/service-metrics-port: "8000"
        consul.hashicorp.com/service-metrics-path: "/metrics"        
      labels:
        app: opa-gov-api
    spec:
      serviceAccountName: opa-gov-api
      containers:
        - name: api
          image: panchalravi/agentguard-opa-gov-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: opa-gov-api
  labels:
    app: opa-gov-api
spec:
  selector:
    app: opa-gov-api
  ports:
    - name: http
      port: 8000
      targetPort: http
  type: ClusterIP
