deploy-k8s/postgresql.yaml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: postgres-demo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: default
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16 # Upgraded to match a modern cluster version
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresdb-data
          mountPath: /var/lib/postgresql/data     # This remains the EBS mount point
  volumeClaimTemplates:
  - metadata:
      name: postgresdb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp2" # Updated to your specific storage class
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-internal-lb
  namespace: default
  annotations:
    # Requires AWS Load Balancer Controller
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    # service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
