deploy-k8s/web-app-deprecated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/enable-metrics-merging: 'false'
      labels:
        app: web
    spec:
      serviceAccountName: web
      containers:
        - name: web
          image: panchalravi/agentguard-web-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          resources:
            limits:
              memory: "200Mi"
              cpu: "256m"
            requests:
              memory: "100Mi"
              cpu: "256m"
          volumeMounts:
            - name: app-env
              mountPath: /app/.env
              subPath: .env
              readOnly: true
      volumes:
        - name: app-env
          secret:
            secretName: web-env
            items:
              - key: .env
                path: .env
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 8501
      targetPort: 8501
