deploy-k8s/wx-gov-api.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wx-gov-api
  labels:
    app: wx-gov-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wx-gov-api
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
        consul.hashicorp.com/enable-metrics-merging: 'true'
        consul.hashicorp.com/service-metrics-port: "8000"
        consul.hashicorp.com/service-metrics-path: "/metrics"  
      labels:
        app: wx-gov-api
    spec:
      serviceAccountName: wx-gov-api
      containers:
        - name: api
          image: panchalravi/agentguard-wx-gov-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: wx-gov-api
  labels:
    app: wx-gov-api
spec:
  selector:
    app: wx-gov-api
  ports:
    - name: http
      port: 8000
      targetPort: http
  type: ClusterIP
